# ffmpeg

./: README.md  config
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/shz/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/shz/ffmpeg/: MainActivity.java  MyVideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/shz/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
